<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".TitleFragment">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleConstraints"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <LinearLayout
                android:id="@+id/linearMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/numbersCard"
                    style="@style/cardStyle"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    >

                    <TextView
                        android:id="@+id/numbersText"
                        style="@style/nameStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/textBackground"
                        android:text="@string/numbers" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/familyCard"
                    style="@style/cardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/familyText"
                        style="@style/nameStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/family" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/phrasesCard"
                    style="@style/cardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/phrasesText"
                        style="@style/nameStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/phrases" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/colorsCard"
                    style="@style/cardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/colorText"
                        style="@style/nameStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/color" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/foodCard"
                    style="@style/cardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/foodText"
                        style="@style/nameStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/food" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/plantsCard"
                    style="@style/cardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/plantText"
                        style="@style/nameStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/plants" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/bodypartCard"
                    style="@style/cardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:id="@+id/bodypartsText"
                        style="@style/nameStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/bodyparts" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>